Added going through files vertically and checking if is winner. Updated estimates.

--- a/estimates.adoc
+++ b/estimates.adoc
@@ -40,6 +40,6 @@
 * [x] Create Judge class
 ** Write methods checking the winner.
 *** [x] go through board horizontally
-*** go through board vertically
+*** [x] go through board vertically
 *** go through diagonal up
 *** go through diagonal down
