--- a/estimates.adoc
+++ b/estimates.adoc
@@ -43,3 +43,19 @@
 *** [x] go through board vertically
 *** go through diagonal up
 *** go through diagonal down
+
+*20.12.2019*
+
+*Pessimistic*
+
+* Add player class.
+* Check if player win.
+
+*Realistic*
+
+* Check diagonal unbroken line
+
+*Optimistic*
+
+* Check which players is winner.
+
