--- a/estimates.adoc
+++ b/estimates.adoc
@@ -59,3 +59,17 @@
 
 * Check which players is winner.
 
+*23.12.2019*
+
+*Pessimistic*
+
+* [x] Checking user input.
+
+*Realistic*
+
+* Error handling.
+
+*Optimistic*
+
+* Add loggers.
+
