--- a/src/main/resources/messages_pl_PL.properties
+++ b/src/main/resources/messages_pl_PL.properties
@@ -1,18 +1,18 @@
 SUCCESS=
-FAILURE_RANGE_OVER=Liczba jest poza zakresem. Spróbuj ponownie.\n
-FAILURE_PLACE_OCCUPIED=To miejsce jest ju¿ zajête. Spróbuj ponownie.\n
-put_first_player_name=Wpisz imiê pierwszego gracza.
-put_second_player_name=Wpisz imiê drugiego gracza.
-get_initial_sign=Który gracz powinien zacz¹æ: O lub X?
-wrong_argument=B³êdny argument. WprowadŸ liczbê ca³kowit¹.
-inappropriate_sign=Niew³aœciwy znak, proszê wybraæ O lub X.
-match_number=Rozpoczyna siê mecz numer %s\nRuch gracza %s.
+FAILURE_RANGE_OVER=Liczba jest poza zakresem. Sprobuj ponownie.\n
+FAILURE_PLACE_OCCUPIED=To miejsce jest juz zajete. Sprobuj ponownie.\n
+put_first_player_name=Wpisz imie pierwszego gracza.
+put_second_player_name=Wpisz imie drugiego gracza.
+get_initial_sign=Ktory gracz powinien zaczac: O lub X?
+wrong_argument=Bledny argument. Wprowadz liczbe calkowita.
+inappropriate_sign=Niewlasciwy znak, prosze wybrac O lub X.
+match_number=Rozpoczyna sie mecz numer %s\nRuch gracza %s.
 player_move=Ruch gracza %s.\n
 draw=Remis\n
 end_draw=Remis\n%s
-winner_is=Zwyciêzc¹ jest: %s.\n
+winner_is=Zwyciezca jest: %s.\n
 score=%s: %s 
-winners_are=Zwyciêzcami s¹: %s 
+winners_are=Zwyciezcami s¹: %s 
 loser_is=Przegrany to: %s.
 losers_are=Przegrani to: %s
 game_over=\n \nKoniec gry!\n
