Improvement automatic tests. Added bash scrypt.

--- a/src/main/resources/messages_pl_PL.properties
+++ b/src/main/resources/messages_pl_PL.properties
@@ -5,8 +5,8 @@ put_first_player_name=Wpisz imie pierwszego gracza.
 put_second_player_name=Wpisz imie drugiego gracza.
 get_initial_sign=Ktory gracz powinien zaczac: O lub X?
 wrong_argument=Bledny argument. Wprowadz liczbe calkowita.
-inappropriate_sign=Niewlasciwy znak, prosze wybrac O lub X.
-match_number=Rozpoczyna sie mecz numer %s\nRuch gracza %s.
+inappropriate_sign=Niew³aœciwy znak, proszê wybraæ O lub X.
+match_number=Rozpoczyna siê mecz numer %s\nRuch gracza %s.
 player_move=Ruch gracza %s.\n
 draw=Remis\n
 end_draw=Remis\n%s
